<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:layout_margin="10dp"
    app:cardUseCompatPadding="8dp"
    card_view:cardCornerRadius="10dp">
    <!-- Alarm Item Layout -->
    <LinearLayout
        android:id="@+id/AlarmItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">
        <!-- Alarm Button Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Alarm Item Button -->
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_alarm_64"
                android:id="@+id/AlarmItemImageView" />
        </LinearLayout>

        <!-- Alarm Text Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- Alarm Title TextView -->
            <TextView
                android:id="@+id/AlarmItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/CustomAlarmName"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"/>
            <!-- Alarm Time TextView -->
            <TextView
                android:id="@+id/AlarmTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/CustomAlarmTime"/>
            <!-- Alarm Schedule Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Month -->
                <TextView
                    android:id="@+id/AlarmItemMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmMonth"/>
                <!-- Tuesday -->
                <TextView
                    android:id="@+id/AlarmItemTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmTuesday"/>
                <!-- Wednesday -->
                <TextView
                    android:id="@+id/AlarmItemWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmWednesday"/>
                <!-- Thursday -->
                <TextView
                    android:id="@+id/AlarmItemThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmThursday"/>
                <!-- Friday -->
                <TextView
                    android:id="@+id/AlarmItemFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmFriday"/>
                <!-- Saturday -->
                <TextView
                    android:id="@+id/AlarmItemSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmSaturday"/>
                <!-- Sunday -->
                <TextView
                    android:id="@+id/AlarmItemSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/CustomAlarmSunday"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>