<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:fitsSystemWindows="true"
    app:cardUseCompatPadding="8dp"
    card_view:cardCornerRadius="10dp">
    <!-- Item Layout -->
    <LinearLayout
        android:id="@+id/ItemLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Timer Item ImageView -->
        <ImageView
            android:id="@+id/CustomTimerImage"
            android:layout_width="wrap_content"
            android:minWidth="64dp"
            android:layout_height="80dp"
            android:minHeight="64dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_alarm_64"
            android:contentDescription="@string/TimerIConImage"
            android:scaleType="fitXY"/>

        <!-- Timer Item TextLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Timer Name TextView -->
            <TextView
                android:id="@+id/CustomTimerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/TimerNameText"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryText"/>

            <!-- Timer Time TextView -->
            <TextView
                android:id="@+id/CustomTimerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TimerTimeText"/>

            <!-- Under -->
            <View
                android:layout_width="wrap_content"
                android:layout_height="0.3dp"
                android:background="@color/colorSecondaryText"/>

            <!-- Timer Button Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Timer Apply Button -->
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:id="@+id/TimerApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/TimerApply"
                    android:textColor="@color/colorAccent"/>
                <!-- Timer Delete Button -->
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:id="@+id/TimerDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/TimerDelete"
                    android:textColor="@color/colorSecondaryText"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>