<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CustomBookMarkCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:fitsSystemWindows="true"
    card_view:cardCornerRadius="10dp"
    android:background="?android:attr/selectableItemBackground">

    <!-- BookMark CardView Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- BookMark Relative Image Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- BookMark CardView ImageView -->
            <ImageView
                android:id="@+id/CustomBookMarkImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/CustomLifeBookMarkImage"
                android:background="@color/colorAccent"/>
            <!-- BookMark Color TextView -->
            <TextView
                android:id="@+id/CustomBookMarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:text="@string/CustomLifeBookMarkText"
                android:textColor="@color/colorPrimaryText"/>
        </RelativeLayout>
        <!-- BookMark Relative Text Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- BookMark Color TextView -->
            <TextView
                android:id="@+id/CustomBookMarkColorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CustomLifeBookMarkName"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"/>
            <!-- BookMark Apply Button -->
            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/CustomBookMarkApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/CustomLifeBookMarkApply"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>